<resources>
    <string name="app_name">Student Hub</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Добро пожаловать в наше приложение для анализа успеваемости студентов!</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="input_info">Введите данные:</string>
    <string name="aveage_score_course">Средний балл успеваемости</string>
    <string name="number_places_grant">Количество мест на грант</string>
    <string name="number_students_apply_grant">Количество студентов подавших заявление на грант</string>
    <string name="calculate">Рассчитать</string>
    <string name="save">Сохранить</string>
    <string name="absence">Кол-во пропусков занятий</string>
    <string name="higher">Желание получить высшее обр.</string>
    <string name="support">Доп.обр.поддержка</string>
    <string name="failures">Кол-во доп.сессий</string>
    <string name="study_time">Время учебы</string>
    <string name="f_edu">Образование отца</string>
    <string name="m_edu">Образование матери</string>
    <string name="student_data_fill">Заполните данные студента</string>
    <string name="predict_title">Прогноз по гранту:</string>
    <string name="statistic">Статистика</string>
    <string name="failures_text">Пропущенные занятия</string>
    <string name="average_score">Средний балл:</string>
    <string name="academic_performance">Учебная успеваемость:</string>
</resources>