<!-- fragment_data_student_form.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistic"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        />

    <!-- Прогноз по гранту -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/predict_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/predict_title"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/final_predict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Вы успешно пройдете на грант"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_dark"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Учебная успеваемость -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/academic_performance"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

            <!-- Блок для отображения среднего балла -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:id="@+id/green_block"
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:background="@drawable/border_green_background"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/red_block"

                    >

                    <TextView
                        android:id="@+id/student_performance_predict"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/holo_green_dark"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_score"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        android:gravity="center"

                        />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/red_block"
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical"
                    android:background="@drawable/border_green_background"
                    android:layout_gravity="end"
                    android:gravity="center"
                    app:layout_constraintStart_toEndOf="@id/green_block"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    >

                    <TextView
                        android:id="@+id/min_grant_predict"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/holo_green_dark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_score_grant"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        android:gravity="center"
                        />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
